beast_back/examples/beast-tb/apigw-tb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigw-tb-svc
  namespace: beast-tb
spec:
  selector:
    app: apigw-tb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
