beast_back/examples/beast-tb/apigw-tb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigw-tb-ingress
  namespace: beast-tb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigw-tb-svc
            port:
              number: 8080
